EVA-33 feat: Se establece el tamaño del logo por porcentaje.

--- a/Administracion/templates/Administracion/Empresas/index.html
+++ b/Administracion/templates/Administracion/Empresas/index.html
@@ -45,7 +45,7 @@
                                                             <tr>
                                                                 <td>{{ empresa.nombre }}</td>
                                                                 <td>{{ empresa.nit}}</td>
-                                                                <td><img src="{{ empresa.logo.url }}" alt="" style="height: 35px"></td>
+                                                                <td><img src="{{ empresa.logo.url }}" alt="" style="height: 12%"></td>
                                                                 <td>{% if empresa.estado == True %}
                                                                     <span class="badge badge-primary">Activo</span>
                                                                     {% else %}
