--- a/Administracion/templates/Administracion/Subempresas/index.html
+++ b/Administracion/templates/Administracion/Subempresas/index.html
@@ -22,7 +22,7 @@
                     <div id="panel-1" class="panel">
                         <div class="panel-hdr">
                             <small>
-                                 <a class="far fa-3x far fa-plus-circle"  href="" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar empresa"></a>
+                                 <a class="far fa-3x far fa-plus-circle"  href="{% url 'Administracion:sub-empresas-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar sub-empresas"></a>
                             </small>
                         </div>
                         <div class="panel-container show">
@@ -45,7 +45,7 @@
                                                             <tr>
                                                                 <td>{{ subempresa.nombre }}</td>
                                                                 <td>{{ subempresa.nit}}</td>
-                                                                <td><img src="{{ subempresa.logo.url }}" alt="" style="height: 6%"></td>
+                                                                <td><img src="{{ subempresa.logo.url }}" alt="" style="height: 12%"></td>
                                                                 <td>{% if subempresa.estado == True %}
                                                                     <span class="badge badge-primary">Activo</span>
                                                                     {% else %}
@@ -53,8 +53,8 @@
                                                                     {% endif %}
                                                                 </td>
                                                               <td>
-                                                                    <a class="far fa-2x fa-edit"  href="" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
-                                                                    <a class="far fa-2x fa-trash-alt color-danger-900" id="eliminar_{{ empresa.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ empresa.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
+                                                                    <a class="far fa-2x fa-edit"  href="{% url 'Administracion:sub-empresas-editar' subempresa.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
+                                                                    <a class="far fa-2x fa-trash-alt color-danger-900" id="eliminar_{{ subempresa.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ subempresa.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
                                                               </td>
                                                             </tr>
                                                         {% endfor %}
@@ -72,7 +72,7 @@
     </div>
 
 
-    {% include 'Administracion/_elements/_modal_confirmar_eliminar.html' with objeto='administracion/empresas' %}
+    {% include 'Administracion/_elements/_modal_confirmar_eliminar.html' with objeto='administracion/sub-empresas' %}
 {% endblock %}
 {% block scripts %}
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.bundle.js' %}"></script>
@@ -186,7 +186,7 @@
 
                             },
                         },
-                        info: 'Mostrando empresas del _START_ al _END_ de un total de  _TOTAL_ empresas',
+                        info: 'Mostrando sub-empresas del _START_ al _END_ de un total de  _TOTAL_ sub-empresas',
 
                      }
                 });
