--- a/Administracion/templates/Administracion/Empresas/index.html
+++ b/Administracion/templates/Administracion/Empresas/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/sweetalert2/sweetalert2.bundle.css'%}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/theme-demo.css' %}">
+    <link rel="stylesheet" media="screen, print" href="{% static 'Administracion/css/Empresas/generales.css' %}">
 {% endblock styles %}
 
 {% block main %}
@@ -45,7 +46,7 @@
                                                             <tr>
                                                                 <td>{{ empresa.nombre }}</td>
                                                                 <td>{{ empresa.nit}}</td>
-                                                                <td><img src="{{ empresa.logo.url }}" alt="" style="height: 12%"></td>
+                                                                <td><img class="empresa-logo-index" src="{{ empresa.logo.url }}" alt=""></td>
                                                                 <td>{% if empresa.estado == True %}
                                                                     <span class="badge badge-primary">Activo</span>
                                                                     {% else %}
