--- a/EVA/templates/EVA/_common/shortcuts.html
+++ b/EVA/templates/EVA/_common/shortcuts.html
@@ -52,6 +52,18 @@
                             </span>
                         </a>
                     </li>
+                    <li>
+                        <a href="{% url 'SGI:index' %}" class="app-list-item text-white border-0 m-0">
+                            <div class="icon-stack">
+                                <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
+                                <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
+                                <i class="fal fa-dot-circle icon-stack-1x opacity-100 color-white"></i>
+                            </div>
+                            <span class="app-list-name">
+                                SGI
+                            </span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
