--- a/SGI/templates/SGI/documentos/index.html
+++ b/SGI/templates/SGI/documentos/index.html
@@ -34,6 +34,7 @@
                                     {% for grupo_documento in grupo_documentos %}
                                         <li>
                                             <span><i class="fa fa-lg fa-file-alt"></i> {{ grupo_documento }}</span>
+                                            <a class="far fa-custom fa-file-plus" style="padding-left: 10px"   href="{% url 'SGI:documentos-crear' proceso.id  grupo_documento.id%}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Crear documento"></a>
                                             <ul>
                                                 {% for documento in documentos %}
                                                     {% if documento.grupo_documento_id == grupo_documento.id %}
