feat: EVA-38 feat: Se implementa un JS general para las notificaciones para EVA.
En este se puede gnerar notificaciones  de tipo toast o  modal (Sweetalaert) que pueden ser utilizadas desde cualqueir aplicaci`ón o modulo de EVA.

También se implementa un modal de tipo espera para ser utilizado en las funcionalidades que envian algo al servidor y necesiten esperar respuesta de este y evitar que el usuario ejecute otra acciòn.

--- a/EVA/templates/EVA/_common/base.html
+++ b/EVA/templates/EVA/_common/base.html
@@ -19,6 +19,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="{% static 'EVA/Plantilla/img/favicon/favicon-32x32.png' %}">
         <link rel="mask-icon" href="{% static 'EVA/Plantilla/img/favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/toastr/toastr.css' %}">
+        <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/sweetalert2/sweetalert2.bundle.css'%}">
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/custom/generales.css' %}">
         <!--<link rel="stylesheet" media="screen, print" href="css/your_styles.css">-->
         {% block styles %}
@@ -145,7 +146,8 @@
         <script src="{% static 'EVA/Plantilla/js/vendors.bundle.js' %}"></script>
         <script src="{% static 'EVA/Plantilla/js/app.bundle.js' %}"></script>
         <script src="{% static 'EVA/Plantilla/js/notifications/toastr/toastr.js' %}"></script>
-        <script src="{% static 'EVA/Plantilla/js/custom/notificacion_toast.js' %}"></script>
+        <script src="{% static 'EVA/Plantilla/js/notifications/sweetalert2/sweetalert2.bundle.js' %}"></script>
+        <script src="{% static 'EVA/Plantilla/js/custom/notificaciones_eva.js' %}"></script>
         <script src="{% static 'Administracion/js/seleccionEmpresa.js' %}"></script>
         <script src="{% static 'EVA/Plantilla/js/custom/ajaxDjango.js' %}"></script>
 
