--- a/Administracion/templates/Administracion/Autenticacion/_common/base_autenticacion.html
+++ b/Administracion/templates/Administracion/Autenticacion/_common/base_autenticacion.html
@@ -24,6 +24,7 @@
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-brands.css' %}">
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/custom/generales.css' %}">
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/toastr/toastr.css' %}">
+        <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/sweetalert2/sweetalert2.bundle.css'%}">
     </head>
     <body>
     <div class="messages">
@@ -47,7 +48,8 @@
     <script src="{% static 'EVA/Plantilla/js/app.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/notifications/toastr/toastr.js' %}"></script>
-    <script src="{% static 'EVA/Plantilla/js/custom/notificacion_toast.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/notifications/sweetalert2/sweetalert2.bundle.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/custom/notificaciones_eva.js' %}"></script>
     {% block scripts %}
     {% endblock %}
 
