--- a/Financiero/templates/Financiero/Facturacion/Facturas/index.html
+++ b/Financiero/templates/Financiero/Facturacion/Facturas/index.html
@@ -56,7 +56,7 @@
                                             <td>{{ factura.fecha_creacion |date:'Y-m-d' }}</td>
                                             <td>{{ factura.usuario_crea.username}}</td>
                                             <td>
-                                                <a class="far fa-2x fa-eye" id="eliminar_{{ empresa.id }}" href="javascript:void(0);"></a>
+                                                <a class="far fa-2x fa-eye" href="{% url 'Financiero:factura-imprimir' factura.id %}"></a>
                                             </td>
                                         </tr>
                                     {% endfor %}
@@ -88,7 +88,7 @@
                                             <td>{{ factura.fecha_creacion |date:'Y-m-d' }}</td>
                                             <td>{{ factura.usuario_crea.username}}</td>
                                             <td>
-                                                <a class="far fa-2x fa-eye" id="eliminar_{{ empresa.id }}" href="javascript:void(0);"></a>
+                                                <a class="far fa-2x fa-eye" href="{% url 'Financiero:factura-imprimir' factura.id %}"></a>
                                                 <a class="far fa-2x fa-edit"  href="{% url 'Financiero:factura-editar' factura.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
                                             </td>
                                         </tr>
