EVA-38 fix: Se soluciona que en el index para los borradores de factura en lugar de aparece el id mostraba era None-

--- a/Financiero/templates/Financiero/Facturacion/Facturas/index.html
+++ b/Financiero/templates/Financiero/Facturacion/Facturas/index.html
@@ -81,7 +81,7 @@
                                 <tbody>
                                     {% for factura in borradores %}
                                         <tr>
-                                            <td>{{ factura.numero_factura }}</td>
+                                            <td>{{ factura.id}}</td>
                                             <td>{{ factura.tercero.nombre}}</td>
                                             <td>{{ factura.can_items }}</td>
                                             <td>{{ factura.total_factura }}</td>
