--- a/Administracion/templates/Administracion/Tercero/crear-editar.html
+++ b/Administracion/templates/Administracion/Tercero/crear-editar.html
@@ -38,6 +38,16 @@
                                                     {% input_text_tag 'nombre' 'Nombre' placeholder="Ingrese el nombre" required="" maxlength="100" value=tercero.nombre mensaje_validacion='Por favor digite el nombre.' invalido=errores.nombre %}
                                                 </div>
                                                 <div class="col-md-6">
+                                                    {% select_tag tipo_terceros 'tipo_tercero_id' 'Seleccione un tipo de tercero' texto_label='Tipo de tercero' value=tercero.tipo_tercero_id required='' mensaje_validacion='Por favor seleccione un tipo de tercero.' invalido=errores.tipo_tercero %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-row">
+                                                <div class="col-md-6">
+                                                    {% select_tag tipos_identificacion 'tipo_identificacion_id' 'Seleccione un tipo de identificación' texto_label="Tipo de Identificación" value=tercero.tipo_identificacion_id required="" mensaje_validacion='Por favor seleccione un tipo de identificación.' invalido=errores.tipo_identificacion %}
+                                                </div>
+                                                <div class="col-md-6">
                                                     {% input_text_tag 'identificacion' 'Identificación' placeholder='Ingrese el número de identificación' required='' maxlength='15' value=tercero.identificacion mensaje_validacion='Por favor digite la identificación' invalido=errores.identificacion %}
                                                 </div>
                                             </div>
@@ -45,19 +55,19 @@
                                         <div class="form-group">
                                             <div class="form-row">
                                                 <div class="col-md-6">
-                                                {% select_tag tipos_identificacion 'tipo_identificacion_id' 'Seleccione un tipo de identificación' texto_label="Tipo de Identificación" value=tercero.tipo_identificacion_id required="" mensaje_validacion='Por favor seleccione un tipo de identificación.' invalido=errores.tipo_identificacion %}
+                                                    {% input_text_tag 'telefono' 'Teléfono' placeholder='Ingrese un # de teléfono' required='' maxlength='30' value=tercero.telefono mensaje_validacion='Por favor digite un teléfono' invalido=errores.telefono %}
                                                 </div>
                                                 <div class="col-md-6">
-                                                {% select_tag empresas 'empresa_id' 'Seleccione una empresa' texto_label="Empresa" value=tercero.empresa_id required="" mensaje_validacion='Por favor seleccione una empresa.' invalido=errores.empresa %}
+                                                    {% input_text_tag 'fax' 'Fax' placeholder='Ingrese un # de fax' maxlength='30' value=tercero.fax mensaje_validacion='Por favor digite un # de fax' invalido=errores.fax %}
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <div class="form-row">
                                                 <div class="col-md-6">
-                                                {% select_tag tipo_terceros 'tipo_tercero_id' 'Seleccione un tipo de tercero' texto_label='Tipo de tercero' value=tercero.tipo_tercero_id required='' mensaje_validacion='Por favor seleccione un tipo de tercero.' invalido=errores.tipo_tercero %}
+                                                    {% input_text_tag 'direccion' 'Dirección' placeholder='Ingrese la dirección' maxlength='100' value=tercero.direccion mensaje_validacion='Por favor digite una dirección' invalido=errores.direccion %}
                                                 </div>
-                                                 <div class="col-md-6">
+                                                <div class="col-md-6">
                                                  {% select_tag departamentos 'departamento_id' 'Seleccione un departamento' texto_label="Departamento" value=tercero.centro_poblado.municipio.departamento.id required="" mensaje_validacion='Por favor seleccione un departamento.'  %}
                                                  </div>
                                             </div>
