EVA-42 Feat: Se edita el botón de ver archivo Para que despliegue el modal Se modifica el tamaño del input para ocupe el tamaño del modal Se agrega un estilo a la base para que el texto de los input file no se salga del contenedor

--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -35,3 +35,7 @@ input[type=checkbox] ~ label:before {
     max-width:500px;
     padding-bottom: 6px;
 }
+
+.custom-file-label{
+    overflow: hidden;
+}
