--- a/SGI/templates/SGI/documentos/cargar-documento.html
+++ b/SGI/templates/SGI/documentos/cargar-documento.html
@@ -31,7 +31,7 @@
                     <div class="form-row">
 
                         <div class="col-md-12">
-                            {% input_file_tag 'archivo' 'Archivo' placeholder="Seleccione un archivo" class='custom-file-input'  invalido=errores.logo accept="image/png, .jpeg, .jpg, image/gif, .pdf"  %}
+                            {% input_file_tag 'archivo' 'Archivo' placeholder="Seleccione un archivo" class='custom-file-input'  invalido=errores.logo accept=".docx, .pptx, .xlsx, .pdf"  %}
                         </div>
                     </div>
                 </div>
