EVA-46 Feat: Se crean dos clases para establecer el margin 10px y padding 0px

--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -39,3 +39,11 @@ input[type=checkbox] ~ label:before {
 .custom-file-label{
     overflow: hidden;
 }
+
+.m-b-10{
+    margin-bottom: 10px !important;
+}
+
+.p-b-0{
+    padding-bottom: 0 !important;
+}
