--- a/SGI/templates/SGI/documentos/cargar-documento.html
+++ b/SGI/templates/SGI/documentos/cargar-documento.html
@@ -4,7 +4,7 @@
 
 <div class="modal-dialog" role="document">
     <div class="modal-content">
-        <div class="modal-header">
+        <div class="modal-header p-b-0">
             <h4 class="modal-title">
                 Cargar archivo al documento {{ documento }}
             </h4>
@@ -16,23 +16,17 @@
             <form action="{% url 'sgi:documentos-cargar' proceso.id  grupo_documento.id documento.id %}" id="empresas-form" method="post" enctype="multipart/form-data" class="needs-validation" novalidate>
                 {% csrf_token %}
                 <div class="form-group">
-                    <div class="form-row">
-                        <div class="col-md-6">
-                            {% input_text_tag 'nombre' 'Nombre' placeholder="Ingrese el nombre" required="" maxlength="100" value=archivo.nombre mensaje_validacion='Por favor digite el nombre.' invalido=errores.nombre %}
-                        </div>
-                         <div class="col-md-6">
-                            {% input_text_tag 'notas' 'Notas' placeholder="Digite una nota" required="" maxlength="100" value=archivo.notas mensaje_validacion='Por favor ingrese una nota' invalido=errores.notas %}
-                        </div>
-
+                    <div class="m-b-10">
+                        {% input_textarea_tag 'notas' 'Notas' type="textarea" placeholder="Digite una nota"  maxlength="100" value=archivo.notas mensaje_validacion='Por favor ingrese una nota' invalido=errores.notas %}
                     </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="form-row">
-
-                        <div class="col-md-12">
-                            {% input_file_tag 'archivo' 'Archivo' placeholder="Seleccione un archivo" class='custom-file-input'  invalido=errores.logo accept=".docx, .pptx, .xlsx, .pdf"  %}
-                        </div>
+                    <div class="m-b-10">
+                        {% input_file_tag 'archivo' 'Archivo' placeholder="Seleccione un archivo" class='custom-file-input'  invalido=errores.logo accept=".docx, .pptx, .xlsx, .pdf"  %}
+                    </div>
+                    <div class="m-b-10">
+                        {% input_date_tag 'fecha_documento' 'Fecha del Documento' placeholder="Seleccione una fecha"   value=archivo.fecha_documento autocomplete="off"  mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_documento %}
+                    </div>
+                    <div class="m-b-10">
+                        {% input_number_tag 'version' 'Versión' placeholder="Ingrese la versión del documento"  min='0.01' max="9999.99" step="0.01" value=archivo.version mensaje_validacion='Por favor digite el valor del contrato.' invalido=errores.version %}
                     </div>
                 </div>
                 <div class="form-row">
