EVA-46 feat: Se realiza modificaciones para permitir la validación de formularios en  modales.

--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -1,6 +1,10 @@
 .invalid-tooltip {
-  line-height: 0.9;
-  background-color: #fd395e;
+    line-height: 0.9;
+    background-color: #fd395e;
+}
+
+.invalid-tooltip-modal {
+    position: relative;
 }
 
 .was-validated .form-control:invalid, .form-control.is-invalid {
