--- a/SGI/templates/SGI/documentos/index.html
+++ b/SGI/templates/SGI/documentos/index.html
@@ -82,5 +82,6 @@
     <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/miscellaneous/treeview/treeview.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/formplugins/bootstrap-datepicker/bootstrap-datepicker.js'%}"></script>
+    <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
     <script src="{% static 'SGI/js/modalCargarArchivo.js' %}"></script>
 {% endblock scripts%}
