--- a/EVA/templates/EVA/_general_tags/_input_general_tag.html
+++ b/EVA/templates/EVA/_general_tags/_input_general_tag.html
@@ -22,7 +22,7 @@
 {% endif %}
 {% endif %}
 {% if mensaje_validacion %}
-     <div class="invalid-tooltip">{{ mensaje_validacion }}</div>
+     <div class="invalid-tooltip {% if modal %}invalid-tooltip-modal{% endif %}">{{ mensaje_validacion }}</div>
 {% endif %}
 {% if tipo == 'checkbox' %}
             <label for="{{ nombre }}_id" class="custom-control-label">{{ texto_label}}</label>
