--- a/EVA/templates/EVA/_general_tags/_select_multiple_tag.html
+++ b/EVA/templates/EVA/_general_tags/_select_multiple_tag.html
@@ -8,5 +8,5 @@
     {% endfor %}
 </select>
 {% if mensaje_validacion %}
-<div class="invalid-tooltip">{{ mensaje_validacion }}</div>
+<div class="invalid-tooltip {% if modal %}invalid-tooltip-modal{% endif %}">{{ mensaje_validacion }}</div>
 {% endif %}
