EVA-46 refactor: Se modifica para que desde la etiqueta input_file_tag se agregue de una vez la clase "custom-file-input"  y así no tener que colocarla en cada elemento.

--- a/Administracion/templates/Administracion/Empresas/crear-editar.html
+++ b/Administracion/templates/Administracion/Empresas/crear-editar.html
@@ -45,7 +45,7 @@
                                         <div class="form-group">
                                             <div class="form-row">
                                                 <div class="col-md-6">
-                                                    {% input_file_tag 'logo' 'Logo de la Empresa' placeholder="Seleccione el logo de la Empresa" class='custom-file-input'  invalido=errores.logo accept="image/png, .jpeg, .jpg, image/gif"  %}
+                                                    {% input_file_tag 'logo' 'Logo de la Empresa' placeholder="Seleccione el logo de la Empresa"  invalido=errores.logo accept="image/png, .jpeg, .jpg, image/gif"  %}
                                                 </div>
                                             </div>
                                         </div>
