--- a/SGI/templates/SGI/documentos/cargar-documento.html
+++ b/SGI/templates/SGI/documentos/cargar-documento.html
@@ -20,7 +20,7 @@
                         {% input_textarea_tag 'notas' 'Notas' type="textarea" placeholder="Digite una nota"  maxlength="100" required="" modal=True value=archivo.notas mensaje_validacion='Por favor ingrese una nota' invalido=errores.notas %}
                     </div>
                     <div class="m-b-10">
-                        {% input_file_tag 'archivo' 'Archivo' placeholder="Seleccione un archivo" class='custom-file-input'  required="" modal=True invalido=errores.logo accept=".docx, .pptx, .xlsx, .pdf" mensaje_validacion='Por favor seleccione un archivo'%}
+                        {% input_file_tag 'archivo' 'Archivo' placeholder="Seleccione un archivo" required="" modal=True invalido=errores.logo accept=".docx, .pptx, .xlsx, .pdf" mensaje_validacion='Por favor seleccione un archivo'%}
                     </div>
                     <div class="m-b-10">
                         {% input_date_tag 'fecha_documento' 'Fecha del Documento' placeholder="Seleccione una fecha"   required="" modal=True value=archivo.fecha_documento autocomplete="off"  mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_documento %}
