EVA-46 feat: Se modifica para que en todos los formularios donde se haga uso un input de tipo file el texto de botón adjunto sea "Buscar" y no "Browser".

--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -44,6 +44,10 @@ input[type=checkbox] ~ label:before {
     overflow: hidden;
 }
 
+.custom-file-label::after{
+    content: 'Buscar';
+}
+
 .m-b-10{
     margin-bottom: 10px !important;
 }
