--- a/EVA/templates/EVA/_common/shortcuts.html
+++ b/EVA/templates/EVA/_common/shortcuts.html
@@ -16,6 +16,7 @@
                             </span>
                         </a>
                     </li>
+                    {% if 'TalentoHumano.can_menu_administracion' in perms %}
                     <li>
                         <a href="{% url 'Administracion:index' %}" class="app-list-item text-white border-0 m-0">
                             <div class="icon-stack">
@@ -28,6 +29,7 @@
                             </span>
                         </a>
                     </li>
+                    {% endif %}
                      <li>
                         <a href="{% url 'Proyectos:index' %}" class="app-list-item text-white border-0 m-0">
                             <div class="icon-stack">
