--- a/Administracion/templates/Administracion/_common/menu_aplicacion.html
+++ b/Administracion/templates/Administracion/_common/menu_aplicacion.html
@@ -4,18 +4,20 @@
         <span class="nav-link-text" data-i18n="nav.administracion_terceros">Terceros</span>
     </a>
 </li>
-<li>
-    <a href="{% url 'Administracion:empresas' %}" title="Empresas" data-filter-tags="empresas">
-        <i class="far fa-briefcase"></i>
-        <span class="nav-link-text" data-i18n="nav.administracion_empresas">Empresas</span>
-    </a>
-</li>
+{%if 'Administracion.view_empresa' in perms %}
+    <li>
+        <a href="{% url 'Administracion:empresas' %}" title="Empresas" data-filter-tags="empresas">
+            <i class="far fa-briefcase"></i>
+            <span class="nav-link-text" data-i18n="nav.administracion_empresas">Empresas</span>
+        </a>
+    </li>
 <li style="padding-left: 15px">
     <a href="{% url 'Administracion:sub-empresas' %}" title="Sub-empresas" data-filter-tags="sub-empresas">
         <i class="far fa-sitemap"></i>
         <span class="nav-link-text" data-i18n="nav.administracion_empresas">Sub-empresas</span>
     </a>
 </li>
+{% endif %}
 
 
 
